--- a/upload.html
+++ b/upload.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
 
@@ -174,4 +174,4 @@ var app = {
 
     </script>
   </body>
-</html>
+</html> -->
