--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <li data-role="list-divider">Categories</li>
                     <li><a href="upload.html" data-ajax="true"><i></i>Biology</a></li>
                     <li><a href="upload.html" data-ajax="true"><i></i>Math</a></li>
-                    <li><a href="camexample/www/" data-ajax="false"><i></i>Computer Science</a></li>
+                    <li><a href="/www/" data-ajax="false"><i></i>Computer Science</a></li>
                     <li><a href="about.html" data-ajax="false"><i></i>History</a></li>
 					<li><a href="about.html" data-ajax="false"><i></i>Chemistry</a></li>
 					<li><a href="about.html" data-ajax="false"><i></i>Art</a></li>   
