--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li data-icon='star'><a href="post.html">Make a Listing</a>
                     </li>
 					<hr>
-                    <li data-icon='search'> <a href="search_results_example.html">View Listings</a>
+                   <li data-icon='search'> <a href="search.html">View Listings</a>
                     </li>
                 </ul>
             </div>
@@ -121,7 +121,7 @@
                     <li data-role="list-divider">Categories</li>
                     <li><a href="upload.html" data-ajax="true"><i></i>Biology</a></li>
                     <li><a href="upload.html" data-ajax="true"><i></i>Math</a></li>
-                    <li><a href="www/example.html" data-ajax="false"><i></i>Computer Science</a></li>
+                    <li><a href="example.html" data-ajax="false"><i></i>Computer Science</a></li>
                     <li><a href="about.html" data-ajax="false"><i></i>History</a></li>
 					<li><a href="about.html" data-ajax="false"><i></i>Chemistry</a></li>
 					<li><a href="about.html" data-ajax="false"><i></i>Art</a></li>   
