--- a/upload.html
+++ b/upload.html
@@ -1,112 +1,25 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-
-
     <title>Submit form</title>
 
-  </head>
-  <body>
-    <form id="regform">
-        <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">Select Photo:</button><br>
-        <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
-
-        First Name: <input type="text" id="firstname" name="firstname"><br>
-        Last Name: <input type="text" id="lastname" name="lastname"><br>
-        Work Place: <input type="text" id="workplace" name="workPlace"><br>
-        <input type="button" id="btnSubmit" value="Submit" onclick="uploadPhoto();">
-    </form>
-
-
-    <script src="phonegap.js" type="text/javascript"></script>
+    <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
     <script type="text/javascript" charset="utf-8">
 
-        app.initialize(); 
-        /*
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
-var app = {
-    // Application Constructor
-    initialize: function() {
-        this.bindEvents();
-    },
-    // Bind Event Listeners
-    //
-    // Bind any events that are required on startup. Common events are:
-    // 'load', 'deviceready', 'offline', and 'online'.
-    bindEvents: function() {
-        document.addEventListener('deviceready', this.onDeviceReady, false);
-    },
-    // deviceready Event Handler
-    //
-    // The scope of 'this' is the event. In order to call the 'receivedEvent'
-    // function, we must explicity call 'app.receivedEvent(...);'
-    onDeviceReady: function() {
-        app.receivedEvent('deviceready');
-    },
-    // Update DOM on a Received Event
-    receivedEvent: function(id) {
-        var parentElement = document.getElementById(id);
-        var listeningElement = parentElement.querySelector('.listening');
-        var receivedElement = parentElement.querySelector('.received');
-
-        listeningElement.setAttribute('style', 'display:none;');
-        receivedElement.setAttribute('style', 'display:block;');
-
-        console.log('Received Event: ' + id);
-    },
-
-    takePicture: function() {
-      navigator.camera.getPicture( function( imageURI ) {
-        alert( imageURI );
-      },
-      function( message ) {
-        alert( message );
-      },
-      {
-        quality: 50,
-        destinationType: Camera.DestinationType.FILE_URI
-      });
-    }
-};
-
-   /* var picureSource;   // picture source
-    var destinattionType; // sets the format of returned value
-
+    var pictureSource;   // picture source
+    var destinationType; // sets the format of returned value
 
     // Wait for device API libraries to load
     //
-    document.addEventListener("deviceready",onDeviceReady,true);
+    document.addEventListener("deviceready",onDeviceReady,false);
 
     // device APIs are available
     //
     function onDeviceReady() {
-        getInfo(); 
         pictureSource = navigator.camera.PictureSourceType;
         destinationType = navigator.camera.DestinationType;
-   
-
-        
     }
 
-    function getInfo(){
-         console.log(device.name);
-    }
 
     // Called when a photo is successfully retrieved
     //
@@ -150,7 +63,7 @@ var app = {
         }
 
         var ft = new FileTransfer();
-        ft.upload(imageURI, encodeURI("http://107.170.157.210/ServerPHP/upload.php"), win, fail, options);
+        ft.upload(imageURI, encodeURI("http://some.server.com/upload.php"), win, fail, options);
     }
 
     // Called if something bad happens.
@@ -170,8 +83,19 @@ var app = {
         alert("An error has occurred: Code = " + error.code);
         console.log("upload error source " + error.source);
         console.log("upload error target " + error.target);
-    }*/
+    }
 
     </script>
+  </head>
+  <body>
+    <form id="regform">
+        <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">Select Photo:</button><br>
+        <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+
+        First Name: <input type="text" id="firstname" name="firstname"><br>
+        Last Name: <input type="text" id="lastname" name="lastname"><br>
+        Work Place: <input type="text" id="workplace" name="workPlace"><br>
+        <input type="button" id="btnSubmit" value="Submit" onclick="uploadPhoto();">
+    </form>
   </body>
-</html> -->
+</html>
