--- a/example.html
+++ b/example.html
@@ -27,14 +27,25 @@
     </head>
     <body>
         <div class="app">
-            <h1>PhoneGap</h1>
+            <h1>PhoneGapa</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <div class="event received">
                   <p>Device is Ready</p>
                 </div>
 
-                <button onclick="app.takePicture();">Take Picture</button>
+
+        <form id="regform">
+        <button onclick="app.getPhoto(pictureSource.PHOTOLIBRARY);">Select Photo:</button><br>
+        <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+
+        First Name: <input type="text" id="firstname" name="firstname"><br>
+        Last Name: <input type="text" id="lastname" name="lastname"><br>
+        Work Place: <input type="text" id="workplace" name="workPlace"><br>
+        <input type="button" id="btnSubmit" value="Submit" onclick="app.uploadPhoto();">
+    </form>
+
+               <!--  <button onclick="app.uploadPhoto();">Take Picture</button> -->
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
