--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				
                 <ul data-role="listview" data-inset="false" data-icon="false" data-divider-theme="a" class="nightly-navigation">
                     <li data-role="list-divider">Categories</li>
-                    <li><a href="upload.html" data-ajax="true"><i></i>Biology</a></li>
+                    <li><a href="example1.html" data-ajax="false"><i></i>Biology</a></li>
                     <li><a href="upload.html" data-ajax="true"><i></i>Math</a></li>
                     <li><a href="example.html" data-ajax="false"><i></i>Computer Science</a></li>
                     <li><a href="about.html" data-ajax="false"><i></i>History</a></li>
