--- a/example.html
+++ b/example.html
@@ -36,7 +36,7 @@
 
 
         <form id="regform">
-        <button onclick="app.takePicture();">Select Photo:</button><br>
+        <button onclick="app.capturePhoto();">Select Photo:</button><br>
         <!-- <button onclick="app.getPhoto(pictureSource.PHOTOLIBRARY);">Select Photo:</button><br> -->
         <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
 
