--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <li><a href="example1.html" data-ajax="false"><i></i>Biology</a></li>
                     <li><a href="upload.html" data-ajax="true"><i></i>Math</a></li>
                     <li><a href="example.html" data-ajax="false"><i></i>Computer Science</a></li>
-                    <li><a href="about.html" data-ajax="false"><i></i>History</a></li>
+                    <li><a href="camera.html" data-ajax="false"><i></i>History</a></li>
 					<li><a href="about.html" data-ajax="false"><i></i>Chemistry</a></li>
 					<li><a href="about.html" data-ajax="false"><i></i>Art</a></li>   
 					<li><a href="about.html" data-ajax="false"><i></i>Psychology</a></li>
