--- a/example1.html
+++ b/example1.html
@@ -30,7 +30,9 @@
             <h1>PhoneGap</h1>
          
 
-                <button onclick="capturePhoto(pictureSource.PHOTOLIBRARY);">Take Picture</button>
+                <button onclick="capturePhoto(pictureSource.PHOTOLIBRARY);">Take Picture</button><br>
+                <button onclick="capturePhoto(pictureSource.Camera);">Take Picture</button>
+
           </div>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/cam.js"></script>
