--- a/example1.html
+++ b/example1.html
@@ -31,7 +31,7 @@
          
 
                 <button onclick="capturePhoto(pictureSource.PHOTOLIBRARY);">Take Picture</button><br>
-                <button onclick="capturePhoto(pictureSource.Camera);">Take Picture</button>
+                <button onclick="capturePhoto(pictureSource.Camera);">Browse</button>
 
           </div>
         <script type="text/javascript" src="phonegap.js"></script>
