--- a/post.html
+++ b/post.html
@@ -152,7 +152,7 @@
                      <label>Image Preview:</label>
                     <fieldset data-role="controlgroup" data-corners="false" data-mini="true">
                    
-                      <img style="display:none;width:60px;height:60px;" id="smallImage" value ="" src="" /> 
+                      <img style="display:none;width:120px;height:100px;" id="smallImage" src="http://107.170.157.210/PicUploads/valoimg.jpg" /> 
                     </fieldset>
 
                     </li>
