--- a/post.html
+++ b/post.html
@@ -42,6 +42,7 @@
 
         <!-- cam JS --> 
         <script type="text/javascript" src="js/cam.js"></script>
+
         
 
     </head>
@@ -157,7 +158,7 @@
                      <label>Image Preview:</label>
                     <fieldset data-role="controlgroup" data-corners="false" data-mini="true">
                    
-                      <img style="display:none;width:120px;height:100px;" id="smallImage" src="http://107.170.157.210/PicUploads/valoimg.jpg" /> 
+                      <img style="display:none;width:120px;height:100px;" id="smallImage" src="" /> 
                     </fieldset>
                     </li>
                 </ul>
