--- a/post.html
+++ b/post.html
@@ -159,6 +159,7 @@
                     <fieldset data-role="controlgroup" data-corners="false" data-mini="true">
                    
                       <img style="display:none;width:120px;height:100px;" id="smallImage" src="" /> 
+                      <input style="display:none;" id="timestamp" value=""/> 
                     </fieldset>
                     </li>
                 </ul>
