--- a/search.html
+++ b/search.html
@@ -123,9 +123,9 @@
 
 				<div data-role="page" id="headline">
 				    <div data-theme="a" data-role="header">
-				        <a href="#home" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>                        
+				        <a href="#home" class="ui-icon ui-icon-back" data-mini="true"data-role="button" data-icon="back" data-iconshadow="false" data-corners="false" data-transition="slide" data-direction="reverse"></a>                        
 				        <h3>
-				            Matches
+				            Details
 				        </h3>
 				    </div>        
 				    <div data-role="content">
