--- a/search.html
+++ b/search.html
@@ -49,6 +49,9 @@
 
 		<!-- jquery mobile iscrollview JS -->
 		<script src="js/jquery.mobile.iscrollview.js"></script> 
+
+		 <!-- script for search ajax request --> 
+       <script src="js/search.js"></script>
 	
 
     <title>Valotrade</title>
@@ -99,7 +102,7 @@
 				                <div data-role="content"><h3></h3></div>
 				            </ul>
 				        </div>
-				         <ul data-role="listview" data-inset="false" data-icon="false" data-divider-theme="a" class="nightly-navigation">
+				       <!--   <ul data-role="listview" data-inset="false" data-icon="false" data-divider-theme="a" class="nightly-navigation">
 		                    <li data-role="list-divider">Categories</li>
 		                    <li><a href="index.html" data-ajax="true"><i></i>Biology</a></li>
 		                    <li><a href="index.html" data-ajax="true"><i></i>Math</a></li>
@@ -114,7 +117,7 @@
 							<li><a href="about.html" data-ajax="false"><i></i>Physics/Astronomy</a></li>
 							<li><a href="about.html" data-ajax="false"><i></i>Education</a></li>
 							<li><a href="about.html" data-ajax="false"><i></i>Theatre</a></li>
-		                </ul>
+		                </ul> -->
 
 
 
@@ -123,7 +126,7 @@
 
 				<div data-role="page" id="headline">
 				    <div data-theme="a" data-role="header">
-				        <a href="#home" class="ui-icon ui-icon-back" data-mini="true"data-role="button" data-icon="back" data-iconshadow="false" data-corners="false" data-transition="slide" data-direction="reverse"></a>                        
+				        <a href="#home" class="ui-btn ui-icon-back ui-btn-icon-left" data-theme="a"  data-transition="slide" data-direction="reverse"></a>                        
 				        <h3>
 				            Details
 				        </h3>
@@ -157,8 +160,7 @@
 				<li>Category</li>
 				</ul> -->
         
-        <!-- script for search ajax request --> 
-       <script src="js/search.js"></script>
+       
 
     </body>
 </html>
