--- a/post.html
+++ b/post.html
@@ -58,7 +58,7 @@
                     <li data-icon='star'><a href="post.html">Make a Listing</a>
                     </li>
                     <hr>
-                    <li data-icon='search'> <a href="search_results_example.html">View Listings</a>
+                    <li data-icon='search'> <a href="search.html">View Listings</a>
                     </li>
                 </ul>
             </div>
