--- a/post.html
+++ b/post.html
@@ -121,9 +121,7 @@
                     
                     <li data-role="fieldcontain">
                         <fieldset data-role="controlgroup" data-type="horizontal" data-mini="true">
-                            <legend>Sell or Trade:</legend>
-                            <input type="checkbox" id="sell" checked="">
-                            <label for="sell">Sell</label>
+                            <legend>Accept Trades:</legend>
                             <input type="checkbox" id="trade">
                             <label for="trade">Trade</label>
                         </fieldset>
