added nav stuff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="css/nightly.css" />
 				
 		
-    <!-- jQuery -->
+		<!-- jQuery -->
 		<script src="js/jquery.min.js"></script>
 		
 		<!-- jQueryMobile -->
@@ -82,7 +82,7 @@
 				<center><input onclick="location.href='search.html'" type="button" value="Find a book" /></center>
 				</table> 
 				
-                <ul data-role="listview" id="catlist" data-icon="false" data-divider-theme="a" class="nightly-navigation">
+                <ul data-role="listview" id="cat-list-index" data-icon="false" data-divider-theme="a" class="nightly-navigation">
                     <li data-role="list-divider">Categories</li>
                     <li><a data-id="biology"><i></i>Biology</a></li>
                     <li><a data-id="math"><i></i>Math</a></li>
