--- a/search.html
+++ b/search.html
@@ -90,22 +90,27 @@
 				                <div data-role="content"><h3></h3></div>
 				            </ul>
 				        </div>
-				       <!--   <ul data-role="listview" data-inset="false" data-icon="false" data-divider-theme="a" class="nightly-navigation">
-		                    <li data-role="list-divider">Categories</li>
-		                    <li><a href="index.html" data-ajax="true"><i></i>Biology</a></li>
-		                    <li><a href="index.html" data-ajax="true"><i></i>Math</a></li>
-		                    <li><a href="about.html" data-ajax="false"><i></i>Computer Science</a></li>
-		                    <li><a href="about.html" data-ajax="false"><i></i>History</a></li>
-							<li><a href="about.html" data-ajax="false"><i></i>Chemistry</a></li>
-							<li><a href="about.html" data-ajax="false"><i></i>Art</a></li>   
-							<li><a href="about.html" data-ajax="false"><i></i>Psychology</a></li>
-						    <li><a href="about.html" data-ajax="false"><i></i>Philosophy</a></li>
-							<li><a href="about.html" data-ajax="false"><i></i>Engineering</a></li>
-							<li><a href="about.html" data-ajax="false"><i></i>Sociology/Anthropology</a></li>
-							<li><a href="about.html" data-ajax="false"><i></i>Physics/Astronomy</a></li>
-							<li><a href="about.html" data-ajax="false"><i></i>Education</a></li>
-							<li><a href="about.html" data-ajax="false"><i></i>Theatre</a></li>
-		                </ul> -->
+				       <ul data-role="listview" id="cat-list" data-icon="false" data-divider-theme="a" class="nightly-navigation">
+                    <li data-role="list-divider">Categories</li>
+                    <li><a data-id="biology"><i></i>Biology</a></li>
+                    <li><a data-id="math"><i></i>Math</a></li>
+                    <li><a data-id="computer science"><i></i>Computer Science</a></li>
+                    <li><a data-id="history" ><i></i>History</a></li>
+					<li><a data-id="chemistry"><i></i>Chemistry</a></li>
+					<li><a data-id="business" ><i></i>Business</a></li>
+					<li><a data-id="foreign" ><i></i>Foreign Language</a></li>
+					<li><a data-id="english" ><i></i>English/Literature</a></li>
+					<li><a data-id="art"><i></i>Art</a></li>   
+					<li><a data-id="psychology" ><i></i>Psychology</a></li>
+				    <li><a data-id="philosphy" ><i></i>Philosophy</a></li>
+					<li><a data-id="engineering"><i></i>Engineering</a></li>
+					<li><a data-id="sociology"><i></i>Sociology/Anthropology</a></li>
+					<li><a data-id="physics" ><i></i>Physics/Astronomy</a></li>
+					<li><a data-id="education" ><i></i>Education</a></li>
+					<li><a data-id="theatre" ><i></i>Theatre</a></li>
+
+                </ul>
+
 
 
 
